--- a/app/views/financial_closings/index.html.erb
+++ b/app/views/financial_closings/index.html.erb
@@ -1,94 +1,84 @@
-<div class="max-w-xl min-w-2xs sm:min-w-xl mx-auto">
-  <div class="bg-white border-4 border-black shadow-2xl mt-12">
-    <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex items-center space-x-2">
-      <h1 class="text-3xl tracking-wide">決算処理</h1>
-    </div>
+<div class="px-8 py-4 flex items-center">
+  <h1 class="text-3xl tracking-wide">決算処理</h1>
+</div>
 
-    <% if @financial_closing.present? %>
-      <div>
-        <%= form_with model: @financial_closing, class: "p-8" do |form| %>
-          <% if @financial_closing.errors.any? %>
-            <div class="bg-red-50 border-2 border-red-800 text-red-800 px-6 py-4 mb-6">
-              <ul>
-                <% @financial_closing.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
+<% if @financial_closing.present? %>
+  <div>
+    <%= form_with model: @financial_closing, class: "p-8" do |form| %>
+      <h2 class="text-2xl tracking-wide mb-4">決算開始</h2>
+      <% if @financial_closing.errors.any? %>
+        <div class="bg-red-50 border-2 border-red-800 text-red-800 px-6 py-4 mb-6">
+          <ul>
+            <% @financial_closing.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-          <div class="p-2 text-center">決算の開始日と終了日を入力してください</div>
-          <div class="grid grid-cols-4 gap-0 border-2 border-black mb-4">
-            <div class="col-span-1">
-              <%= form.label :start_date, "期首",
-                class: "block border-b-[0.5px] border-r-[0.5px] border-black bg-gray-100 p-4 text-center" %>
-            </div>
-            <div class="col-span-3">
-              <%= form.date_field :start_date, required: true, autofocus: true,
-                class: "block w-full h-full border-b-[0.5px] border-black p-4 focus:outline-none focus:bg-yellow-100" %>
-            </div>
-          </div>
-          <div class="grid grid-cols-4 gap-0 border-2 border-black mb-4">
-            <div class="col-span-1">
-              <%= form.label :end_date, "期末",
-                class: "block border-b-[0.5px] border-r-[0.5px] border-black bg-gray-100 p-4 text-center" %>
-            </div>
-            <div class="col-span-3">
-              <%= form.date_field :end_date, required: true,
-                class: "block w-full h-full border-b-[0.5px] border-black p-4 focus:outline-none focus:bg-yellow-100" %>
-            </div>
-          </div>
-
-          <div class="flex justify-center">
-            <%= form.submit "決算を開始する",
-              class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
-          </div>
-        <% end %>
+      <div class="mb-2">決算の開始日と終了日を入力してください</div>
+      <div class="w-xs grid grid-cols-4 gap-0 border-2 border-black mb-4">
+        <div class="col-span-1">
+          <%= form.label :start_date, "期首",
+            class: "block border-b-[0.5px] border-r-[0.5px] border-black bg-gray-100 p-4 text-center" %>
+        </div>
+        <div class="col-span-3">
+          <%= form.date_field :start_date, required: true, autofocus: true,
+            class: "block w-full h-full border-b-[0.5px] border-black p-4 focus:outline-none focus:bg-yellow-100" %>
+        </div>
       </div>
-    <% end %>
+      <div class="w-xs grid grid-cols-4 gap-0 border-2 border-black mb-4">
+        <div class="col-span-1">
+          <%= form.label :end_date, "期末",
+            class: "block border-b-[0.5px] border-r-[0.5px] border-black bg-gray-100 p-4 text-center" %>
+        </div>
+        <div class="col-span-3">
+          <%= form.date_field :end_date, required: true,
+            class: "block w-full h-full border-b-[0.5px] border-black p-4 focus:outline-none focus:bg-yellow-100" %>
+        </div>
+      </div>
 
-    <% if @financial_closing.present? && @financial_closings.present? %>
-      <hr class="border-2" />
+      <%= form.submit "決算を開始する",
+        class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
     <% end %>
+  </div>
+<% end %>
 
-    <% if @financial_closings.present? %>
-      <div>
-        <div class="p-8 space-y-4">
-          <% @financial_closings.each do |financial_closing| %>
-            <div class="p-4 border shadow-md">
-              <div class="flex justify-between mb-2">
-                <span><%= financial_closing.start_date %> ~ <%= financial_closing.end_date %></span>
-                <% if financial_closing.phase == "done" %>
-                  <div class="flex items-center space-x-1">
-                    <!-- https://heroicons.com/ -->
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
-                    </svg>
-                    <p>完了</p>
-                  </div>
-                <% else %>
-                  <div class="flex items-center space-x-1">
-                    <!-- https://heroicons.com/ -->
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
-                    </svg>
-                    <p>進行中</p>
-                  </div>
-                <% end %>
-              </div>
-              <% if financial_closing.phase == "done" %>
-                <p class="text-center underline">
-                  <%= link_to "財務諸表", financial_closing_statements_path(financial_closing_id: financial_closing.id), target: :_blank %>
-                </p>
-              <% else %>
-                <p class="text-center underline">
-                  <%= link_to "決算処理", edit_financial_closing_path %>
-                </p>
-              <% end %>
+<% if @financial_closings.present? %>
+  <div class="p-8 space-y-4">
+    <h2 class="text-2xl tracking-wide mb-4">決算履歴</h2>
+    <% @financial_closings.each do |financial_closing| %>
+      <div class="max-w-lg p-4 border shadow-md">
+        <div class="flex justify-between mb-2">
+          <span><%= financial_closing.start_date %> ~ <%= financial_closing.end_date %></span>
+          <% if financial_closing.phase == "done" %>
+            <div class="flex items-center space-x-1">
+              <!-- https://heroicons.com/ -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+              </svg>
+              <p>完了</p>
+            </div>
+          <% else %>
+            <div class="flex items-center space-x-1">
+              <!-- https://heroicons.com/ -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
+              </svg>
+              <p>進行中</p>
             </div>
           <% end %>
         </div>
-    </div>
+        <% if financial_closing.phase == "done" %>
+          <p class="text-center underline">
+            <%= link_to "財務諸表", financial_closing_statements_path(financial_closing_id: financial_closing.id), target: :_blank %>
+          </p>
+        <% else %>
+          <p class="text-center underline">
+            <%= link_to "決算処理", edit_financial_closing_path %>
+          </p>
+        <% end %>
+      </div>
     <% end %>
   </div>
-</div>
+<% end %>
