--- a/app/views/financial_closings/statements/show.html.erb
+++ b/app/views/financial_closings/statements/show.html.erb
@@ -1,143 +1,137 @@
-<div class="max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
-  <div class="bg-white border-4 border-black shadow-2xl">
-    <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
-      <h1 class="text-3xl tracking-wide">財務諸表</h1>
-    </div>
+<div class="px-8 py-4">
+  <h1 class="text-3xl tracking-wide">財務諸表 <span class="text-xl tracking-normal align-middle"><%= @start_date.strftime('%Y年%m月%d日') %> ~ <%= @end_date.strftime('%Y年%m月%d日') %></span></h1>
+</div>
 
-    <p class="font-bold text-center m-4"><%= @start_date.strftime('%Y年%m月%d日') %> ~ <%= @end_date.strftime('%Y年%m月%d日') %></p>
+<div class="px-8 pb-8">
+  <h2 class="text-2xl tracking-wide mb-4 text-center">貸借対照表</h2>
+  <table class="w-full border-collapse border-2 mb-8">
+    <colgroup>
+      <col class="w-2/6">
+      <col class="w-1/6">
+      <col class="w-2/6">
+      <col class="w-1/6">
+    </colgroup>
 
-    <div class="px-8 pb-8">
-      <h2 class="text-2xl tracking-wide mb-4 text-center">貸借対照表</h2>
-      <table class="w-full border-collapse border-2 mb-8">
-        <colgroup>
-          <col class="w-2/6">
-          <col class="w-1/6">
-          <col class="w-2/6">
-          <col class="w-1/6">
-        </colgroup>
+    <% i = 0 %>
+    <% loop do %>
+    <% debit_line = @bs_debit_lines[i] %>
+    <% credit_line = @bs_credit_lines[i] %>
+    <% break if debit_line.blank? && credit_line.blank? %>
 
-        <% i = 0 %>
-        <% loop do %>
-        <% debit_line = @bs_debit_lines[i] %>
-        <% credit_line = @bs_credit_lines[i] %>
-        <% break if debit_line.blank? && credit_line.blank? %>
+    <tr>
+      <% if debit_line.present? %>
+        <td>
+          <div class="w-full h-full py-2 text-center">
+            <%= debit_line[0] %>
+          </div>
+        </td>
+        <td class="border-r">
+          <div class="w-full h-full py-2 pr-2 text-right">
+            <%= format_amount(debit_line[1]) %>
+          </div>
+        </td>
+      <% else %>
+        <td />
+        <td class="border-r" />
+      <% end %>
+      <% if credit_line.present? %>
+        <td class="border-l">
+          <div class="w-full h-full py-2 text-center">
+            <%= credit_line[0] %>
+          </div>
+        </td>
+        <td>
+          <div class="w-full h-full py-2 pr-2 text-right">
+            <%= format_amount(credit_line[1]) %>
+          </div>
+        </td>
+      <% else %>
+        <td class="border-l" />
+        <td />
+      <% end %>
+    </tr>
 
-        <tr>
-          <% if debit_line.present? %>
-            <td>
-              <div class="w-full h-full py-2 text-center">
-                <%= debit_line[0] %>
-              </div>
-            </td>
-            <td class="border-r">
-              <div class="w-full h-full py-2 pr-2 text-right">
-                <%= format_amount(debit_line[1]) %>
-              </div>
-            </td>
-          <% else %>
-            <td />
-            <td class="border-r" />
-          <% end %>
-          <% if credit_line.present? %>
-            <td class="border-l">
-              <div class="w-full h-full py-2 text-center">
-                <%= credit_line[0] %>
-              </div>
-            </td>
-            <td>
-              <div class="w-full h-full py-2 pr-2 text-right">
-                <%= format_amount(credit_line[1]) %>
-              </div>
-            </td>
-          <% else %>
-            <td class="border-l" />
-            <td />
-          <% end %>
-        </tr>
+    <% i += 1 %>
+    <% end %>
+    <tr class="border-t">
+      <td />
+      <td class="border-r">
+        <div class="w-full h-full py-2 pr-2 text-right">
+          <%= format_amount(@balance_sheet.total_assets) %>
+        </div>
+      </td>
+      <td class="border-l" />
+      <td>
+        <div class="w-full h-full py-2 pr-2 text-right">
+          <%= format_amount(@balance_sheet.total_liabilities + @balance_sheet.total_equity) %>
+        </div>
+      </td>
+    </tr>
+  </table>
 
-        <% i += 1 %>
-        <% end %>
-        <tr class="border-t">
-          <td />
-          <td class="border-r">
-            <div class="w-full h-full py-2 pr-2 text-right">
-              <%= format_amount(@balance_sheet.total_assets) %>
-            </div>
-          </td>
-          <td class="border-l" />
-          <td>
-            <div class="w-full h-full py-2 pr-2 text-right">
-              <%= format_amount(@balance_sheet.total_liabilities + @balance_sheet.total_equity) %>
-            </div>
-          </td>
-        </tr>
-      </table>
+  <h2 class="text-2xl tracking-wide mb-4 text-center">損益計算書</h2>
+  <table class="w-full border-collapse border-2 mb-4">
+    <colgroup>
+      <col class="w-2/6">
+      <col class="w-1/6">
+      <col class="w-2/6">
+      <col class="w-1/6">
+    </colgroup>
 
-      <h2 class="text-2xl tracking-wide mb-4 text-center">損益計算書</h2>
-      <table class="w-full border-collapse border-2 mb-4">
-        <colgroup>
-          <col class="w-2/6">
-          <col class="w-1/6">
-          <col class="w-2/6">
-          <col class="w-1/6">
-        </colgroup>
+    <% i = 0 %>
+    <% loop do %>
+    <% debit_line = @pl_debit_lines[i] %>
+    <% credit_line = @pl_credit_lines[i] %>
+    <% break if debit_line.blank? && credit_line.blank? %>
 
-        <% i = 0 %>
-        <% loop do %>
-        <% debit_line = @pl_debit_lines[i] %>
-        <% credit_line = @pl_credit_lines[i] %>
-        <% break if debit_line.blank? && credit_line.blank? %>
+    <tr>
+      <% if debit_line.present? %>
+        <td>
+          <div class="w-full h-full py-2 text-center">
+            <%= debit_line[0] %>
+          </div>
+        </td>
+        <td class="border-r">
+          <div class="w-full h-full py-2 pr-2 text-right">
+            <%= format_amount(debit_line[1]) %>
+          </div>
+        </td>
+      <% else %>
+        <td />
+        <td class="border-r" />
+      <% end %>
+      <% if credit_line.present? %>
+        <td class="border-l">
+          <div class="w-full h-full py-2 text-center">
+            <%= credit_line[0] %>
+          </div>
+        </td>
+        <td>
+          <div class="w-full h-full py-2 pr-2 text-right">
+            <%= format_amount(credit_line[1]) %>
+          </div>
+        </td>
+      <% else %>
+        <td class="border-l" />
+        <td />
+      <% end %>
+    </tr>
 
-        <tr>
-          <% if debit_line.present? %>
-            <td>
-              <div class="w-full h-full py-2 text-center">
-                <%= debit_line[0] %>
-              </div>
-            </td>
-            <td class="border-r">
-              <div class="w-full h-full py-2 pr-2 text-right">
-                <%= format_amount(debit_line[1]) %>
-              </div>
-            </td>
-          <% else %>
-            <td />
-            <td class="border-r" />
-          <% end %>
-          <% if credit_line.present? %>
-            <td class="border-l">
-              <div class="w-full h-full py-2 text-center">
-                <%= credit_line[0] %>
-              </div>
-            </td>
-            <td>
-              <div class="w-full h-full py-2 pr-2 text-right">
-                <%= format_amount(credit_line[1]) %>
-              </div>
-            </td>
-          <% else %>
-            <td class="border-l" />
-            <td />
-          <% end %>
-        </tr>
-
-        <% i += 1 %>
-        <% end %>
-        <tr class="border-t">
-          <td />
-          <td class="border-r">
-            <div class="w-full h-full py-2 pr-2 text-right">
-              <%= format_amount(@pl_total_debit) %>
-            </div>
-          </td>
-          <td class="border-l" />
-          <td>
-            <div class="w-full h-full py-2 pr-2 text-right">
-              <%= format_amount(@pl_total_credit) %>
-            </div>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </div>
+    <% i += 1 %>
+    <% end %>
+    <tr class="border-t">
+      <td />
+      <td class="border-r">
+        <div class="w-full h-full py-2 pr-2 text-right">
+          <%= format_amount(@pl_total_debit) %>
+        </div>
+      </td>
+      <td class="border-l" />
+      <td>
+        <div class="w-full h-full py-2 pr-2 text-right">
+          <%= format_amount(@pl_total_credit) %>
+        </div>
+      </td>
+    </tr>
+  </table>
 </div>
